# project-akio

./: LICENSE  README.md  afk.json  config.json  config.py  config.py.example  main.py  pyproject.toml  run.py
cogs/: DL.PY  afk.py  fun.py  image.py  moderation.py  snipe.py  system.py  utils.py
logging_files/: events_logging.py  owner_logging
utils/: confirm.py  permissions.py
