[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
aiohttp = "^3.8.1"
config = "^0.5.1"

psutil = "^5.9.1"
Flask = "^2.1.2"
googletrans = "^3.0.0"
requests = "^2.28.0"
nextcord = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"